# fast_zero

./: Dockerfile  README.md  compose.yaml  example.env  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/exceptions/: auth_exceptions.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 090fed3ce18b_create_todos_table.py  47f09ec73bf0_create_users_table.py  af78543a6cc2_adding_init_false_on_updated_at_column.py  dcfeb71153b5_update_users_table_adding_updated_at_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
